--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -42,16 +42,30 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet">
 
 
-  <!-- <link rel="stylesheet" href="/css/editortextarea.css"> -->
+
+  <!-- <link rel="stylesheet" href="/css/editortextarea.css">
   <link href="https://cdn.jsdelivr.net/npm/froala-editor@latest/css/froala_editor.pkgd.min.css" rel="stylesheet"
     type="text/css" />
-
+ -->
 
 
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384- 
  fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+
+  <!---    trumbowyg  -->
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.13.0/themes/prism.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/plugins/line-highlight/prism-line-highlight.min.css">
+
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/ui/trumbowyg.min.css">
+    <!-- Import prismjs style in <head>... -->
+<!-- Import highlight plugin style in <head>... -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/plugins/highlight/ui/trumbowyg.highlight.min.css">
+
+
   <!-- https://fonts.google.com/ -->
 
 
@@ -105,20 +119,31 @@
   <!-- Contact Form JavaScript File -->
   <script src="/contactform/contactform.js"></script>
 
-  <!--    <script src="/js/editortextarea.js"></script> -->
+  <!--    <script src="/js/editortextarea.js"></script> 
   <script type="text/javascript"
-    src="https://cdn.jsdelivr.net/npm/froala-editor@latest/js/froala_editor.pkgd.min.js"></script>
+    src="https://cdn.jsdelivr.net/npm/froala-editor@latest/js/froala_editor.pkgd.min.js"></script> -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.20/js/jquery.dataTables.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.20/js/dataTables.bootstrap4.min.js"></script>
 
+  <!-- <script src='https://cdn.tiny.cloud/1/kymx1msl7zbxn09i9uj1qtwv4829qeh7wwn143n0q5uw90vz/tinymce/5/tinymce.min.js' referrerpolicy="origin">
+  </script> -->
 
 
 
 
+<script src="trumbowyg/dist/plugins/fontsize/trumbowyg.fontsize.min.js"></script>
+
+    
+<!-- Import prismjs and Trumbowyg highlight at the end of <body>... -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/plugins/line-highlight/prism-line-highlight.min.js"></script>
 
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/trumbowyg.min.js"></script>
+  </script>
+  
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/plugins/highlight/trumbowyg.highlight.min.js"></script>
 </body>
 
 </html>
