--- a/src/views/stripeaccount/success-new-costumer.hbs
+++ b/src/views/stripeaccount/success-new-costumer.hbs
@@ -8,15 +8,24 @@
     <br>
     {{> errors}}
 
-    <div class="tm-main row justify-content-md-center margin-x-0">
+
+    <section id="services">
+      <div class="container">
+
+        <header class="section-header wow fadeInUp">
+          <h3>Congrats! your stripe account is ready</h3>
+          <p>
+            You can now answer the question you want, don't wait any longer and earn money.</p>
+          <div class="row justify-content-md-center">
+            <a href="/questions/allquestions"> <button class="button-main-4">Answer a
+                Question!</button></a>
+          </div>
+
+        </header>
 
 
-      <fieldset class="fieldset-question col-md-8">
-        <legend class="legend-question">Congrats! your stripe account is ready</legend>
-        <div class="card-body">
-         <a href="/questions/allquestions"> <button id="addcustomerbutton" class="button-main-1">Answer a Question!</button></a>
-        </div>
-      </fieldset>
-    </div>
+      </div>
+    </section>
+
   </div>
 </div>
