--- a/src/public/css/personal.css
+++ b/src/public/css/personal.css
@@ -537,3 +537,9 @@ margin-left: 1rem;
     margin-right: 2rem;
     margin-top: 0.5rem;
 }
+
+.trumbowyg-button-pane svg{
+
+    width: 22px !important;
+
+}
