--- a/src/views/partials/do-answer-disabled.hbs
+++ b/src/views/partials/do-answer-disabled.hbs
@@ -2,7 +2,7 @@
 <div class="row card border-card">
   <!--  HEADEER --->
   <div class="banner-question u-section-2">
-    <h3 class="u-heading-font u-text u-text-palette-1-base u-text-1">PORTAFOLIO</h3>
+    <h3 class="u-heading-font u-text u-text-palette-1-base u-text-1">QUESTIONS</h3>
     <h2 class="u-heading-font u-text u-text-2">PROYECTOS RECIENTES</h2>
     <div class="u-border-3 u-border-palette-1-base u-line u-line-horizontal u-line-1"></div>
   </div>
@@ -83,7 +83,7 @@
       <div class="answer-do-container col-md-8">
           <form action="/questions/doanswer/{{question.id}}?_method=PUT" method="POST">
              <input type ="hidden" name ="_method" value="PUT">
-        <textarea id="new_answer" name="new_answer"></textarea>
+        <textarea  class="trumbowyg-textarea" name="new_answer" required="required"></textarea>
          <button class="button-main-1 mt-5" type="submit"> Save </button>
         </form>
       </div>
