--- a/src/views/partials/errors.hbs
+++ b/src/views/partials/errors.hbs
@@ -1,5 +1,5 @@
 {{#if error}}
-<div class="alert alert-danger alert-dismissible fade show" role="alert">
+<div class="col-md-12 alert alert-danger alert-dismissible fade show" role="alert">
   <div class="alert-container">
     {{error}}
     <button type="button" id="alertbutton" class="close alert" aria-label="Close"> <span aria-hidden="true">&times;</span></button>
@@ -8,7 +8,7 @@
 {{/if}}
 
 {{#each errors}}
-<div class="alert alert-danger alert-dismissible fade show" role="alert">
+<div class="col-md-12 alert alert-danger alert-dismissible fade show" role="alert">
    <div class="alert-container">
   {{text}}
   <button type="button" id="alertbutton" class="close alert" aria-label="Close"> <span aria-hidden="true">&times;</span></button>
