--- a/src/views/questions/enable-answers.hbs
+++ b/src/views/questions/enable-answers.hbs
@@ -1,13 +1,59 @@
+<!-- CARROUSEL  INTRO -->
+<section id="intro">
+  <div class="intro-container">
+    <div id="introCarousel" class="carousel  slide carousel-fade" data-ride="carousel">
 
+      <ol class="carousel-indicators"></ol>
+
+      <div class="carousel-inner" role="listbox">
+
+        <div class="carousel-item active">
+          <div class="carousel-background"><img src="img/back5.jpg" alt=""></div>
+          <div class="carousel-container">
+            <div class="carousel-content">
+
+              <div class="row container-title-index">
+                <div class="col-md-10 offset-md-2">
+                  <h1><a href="#intro" class="scrollto logov1"><img src="img/logoprice.png" alt='logov1' /> </a></h1>
+                  <h1 class="h1-title-index">
+                    Do you need a quick answer?</h1>
+                  <h1 class="h1-title-index">
+                    Get it!</h1>
+                  <p class="subtitle-index">Put a reward on your question and just wait for the quick answers.</p>
+                  <div class="mt-3">
+                    <form action="/checkout-session-enableanswers" method="POST">
+                      <input type="hidden" value="{{id_question}}" name="idquestion" readonly>
+                      <button type="submit" class="button-main-3" >Checkout</button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <a class="carousel-control-prev" href="#introCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon ion-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+
+      <a class="carousel-control-next" href="#introCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon ion-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+
+    </div>
+  </div>
+</section><!-- END CARROUSEL  INTRO -->
+{{> errors}}
 <div class="row card border-card">
-<div class="button-see-answer2">
- <!-- <a href="/questions/get_enable_answers/{{id_question}}"> <button class="button-see-answer2"> Confirm Pay
+  <div class="button-see-answer2">
+    <!-- <a href="/questions/get_enable_answers/{{id_question}}"> <button class="button-see-answer2"> Confirm Pay
     </button></a> -->
 
-    <form action="/checkout-session-enableanswers" method="POST">
-      <input type="hidden" value="{{id_question}}" name="idquestion" readonly>
-      <button type="submit">Checkout</button>
-    </form>
-</div>
+
+  </div>
 
 </div>
