--- a/src/views/questions/new-question.hbs
+++ b/src/views/questions/new-question.hbs
@@ -1,26 +1,26 @@
 <div class="row backgroundwhite">
   <div class="card card-question border-card">
     <div class="banner-question u-section-2">
-      <h3 class="u-heading-font u-text u-text-palette-1-base u-text-1">PORTAFOLIO</h3>
-      <h2 class="u-heading-font u-text u-text-2">PROYECTOS RECIENTES</h2>
+      <h3 class="u-heading-font u-text u-text-palette-1-base u-text-1">QUESTIONS</h3>
+      <h2 class="u-heading-font u-text u-text-2">NEW QUESTIONS</h2>
       <div class="u-border-3 u-border-palette-1-base u-line u-line-horizontal u-line-1"></div>
     </div>
     <br>
       {{> errors}}
-
-    <fieldset class="fieldset-question">
-      <legend class="legend-question">Reservation Details</legend>
+ <div class="tm-main row justify-content-md-center margin-x-0">
+    <fieldset class="fieldset-question col-md-7">
+      <legend class="legend-question">Do a new Question</legend>
       <div class="card-body">
         <form action="/questions/new-question" method="POST">
           <div class="mt-3">
             <label for="title">Title</label>
-            <input type="text" id="title" name="title" class="form-control" placeholder="Title"  maxlength="100" autofocus>
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            <input type="text" id="title" name="title" class="form-control" placeholder="Title"  maxlength="100" required="required" autofocus>
+            <small id="emailHelp" class="form-text text-muted">Write a short summary of your question.</small>
           </div>
           <div class="mt-3">
             <label for="description">Description</label>
-            <textarea id="description" name="description" class="form-control" placeholder="description" maxlength="10"></textarea>
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            <textarea id="description" name="description" class="form-control trumbowyg-textarea" placeholder="description" required="required"></textarea>
+            <small id="emailHelp" class="form-text text-muted">Describe your question in detail.</small>
           </div>
           <div class="mt-3">
             <label for="tags-id">Tags</label>
@@ -29,7 +29,7 @@
               <div class="tags-added-container" contenteditable="false"></div>
             </div>
           </div>
-          <small id="emailHelp" class="form-text text-muted">Add your tags so experts can find your questions</small>
+          <small id="emailHelp" class="form-text text-muted">Add your tags so experts can find your questions (press "Enter" to add the tag)</small>
 
 
           <div class="mt-3">
@@ -38,7 +38,7 @@
               <div class="input-group-prepend">
                 <span class="input-group-text">$US</span>
               </div>
-              <input type="number" name="reward" min="0.00" max="10000.00" step="0.1" />
+              <input type="number" name="reward" min="0.00" max="10000.00" step="0.1"  required="required" />
             </div>
             <small id="emailHelp" class="form-text text-muted">Specify the amount you will pay to see the
               answers.</small>
@@ -49,5 +49,6 @@
         </form>
       </div>
     </fieldset>
+    </div>
 
   </div>
