--- a/src/views/partials/do-answer-disabled.hbs
+++ b/src/views/partials/do-answer-disabled.hbs
@@ -3,7 +3,7 @@
   <!--  HEADEER --->
   <div class="banner-question u-section-2">
     <h3 class="u-heading-font u-text u-text-palette-1-base u-text-1">QUESTIONS</h3>
-    <h2 class="u-heading-font u-text u-text-2">PROYECTOS RECIENTES</h2>
+    <h2 class="u-heading-font u-text u-text-2">ANSWER A QUESTION</h2>
     <div class="u-border-3 u-border-palette-1-base u-line u-line-horizontal u-line-1"></div>
   </div>
   <!-- /HEADER -->
@@ -61,10 +61,12 @@
           <div class="profile-answer-body">
             <div class="profile-question-info profile-country">
               <i class="fas fa-map-marker-alt"></i>
+              
               {{userallInfo.country_birth}}
             </div>
             <div class="profile-question-info profile-allquestions">
               <i class="fas fa-question-circle"></i>
+
               {{countLength userallInfo.user_questions}} Questions asked
             </div>
             <div class="profile-question-info profile-questions-paid">
