--- a/src/views/partials/see-own-question-aenabled.hbs
+++ b/src/views/partials/see-own-question-aenabled.hbs
@@ -2,8 +2,8 @@
 <div class="row card border-card">
   <!--  HEADEER --->
   <div class="banner-question u-section-2">
-    <h3 class="u-heading-font u-text u-text-palette-1-base u-text-1">PORTAFOLIO</h3>
-    <h2 class="u-heading-font u-text u-text-2">PROYECTOS RECIENTES</h2>
+    <h3 class="u-heading-font u-text u-text-palette-1-base u-text-1">QUESTIONS</h3>
+    <h2 class="u-heading-font u-text u-text-2">MY QUESTIONS</h2>
     <div class="u-border-3 u-border-palette-1-base u-line u-line-horizontal u-line-1"></div>
   </div>
   <!-- /HEADER -->
