--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -19,6 +19,12 @@
               <input type="password" class="form-control" name="password" placeholder="password" autofocus>
             </div>
             <div class="mt-3">
+              <div class="register-text-login">
+                <a href="/users/recoverypass" class="link-primary link-forgot-pass">Forgot Password?</a>
+              </div>
+            </div>
+
+            <div class="mt-3">
               <button type="submit" class="btn btn-primary btn-block">SignIn </button>
             </div>
             <div class="footer-login mt-4">
