--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -144,6 +144,9 @@
   </script>
   
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/plugins/highlight/trumbowyg.highlight.min.js"></script>
+
+  <script src='https://www.paypalobjects.com/js/external/api.js'></script>
+
 </body>
 
 </html>
