--- a/src/views/partials/do-answer-enabled.hbs
+++ b/src/views/partials/do-answer-enabled.hbs
@@ -2,8 +2,8 @@
 <div class="row card border-card">
   <!--  HEADEER --->
   <div class="banner-question u-section-2">
-    <h3 class="u-heading-font u-text u-text-palette-1-base u-text-1">PORTAFOLIO</h3>
-    <h2 class="u-heading-font u-text u-text-2">PROYECTOS RECIENTES</h2>
+    <h3 class="u-heading-font u-text u-text-palette-1-base u-text-1">QUESTIONS</h3>
+    <h2 class="u-heading-font u-text u-text-2">ANSWER A QUESTION</h2>
     <div class="u-border-3 u-border-palette-1-base u-line u-line-horizontal u-line-1"></div>
   </div>
   <!-- /HEADER -->
@@ -365,14 +365,6 @@
           <!-- /container -->
           {{/each}}
         </div>
-        {{#if ../question.best_answer_chosen }}
-        {{else}}
-        <div class="button-see-answer2 ">
-          <a href="/questions/choose_best_answer/{{_id}}"> <button class="button-see-answer2 button-best-answer"> This is the best Answer!
-            </button></a>
-        </div>
-        {{/if}}
-
       </div>
       {{/each}}
     </div>
