--- a/src/views/questions/new-question.hbs
+++ b/src/views/questions/new-question.hbs
@@ -5,50 +5,55 @@
       <h2 class="u-heading-font u-text u-text-2">NEW QUESTIONS</h2>
       <div class="u-border-3 u-border-palette-1-base u-line u-line-horizontal u-line-1"></div>
     </div>
+
+    {{> errors}}
     <br>
-      {{> errors}}
- <div class="tm-main row justify-content-md-center margin-x-0">
-    <fieldset class="fieldset-question col-md-7">
-      <legend class="legend-question">Do a new Question</legend>
-      <div class="card-body">
-        <form action="/questions/new-question" method="POST">
-          <div class="mt-3">
-            <label for="title">Title</label>
-            <input type="text" id="title" name="title" class="form-control" placeholder="Title"  maxlength="100" required="required" autofocus>
-            <small id="emailHelp" class="form-text text-muted">Write a short summary of your question.</small>
-          </div>
-          <div class="mt-3">
-            <label for="description">Description</label>
-            <textarea id="description" name="description" class="form-control trumbowyg-textarea" placeholder="description" required="required"></textarea>
-            <small id="emailHelp" class="form-text text-muted">Describe your question in detail.</small>
-          </div>
-          <div class="mt-3">
-            <label for="tags-id">Tags</label>
-            <div class="container-tag2">
-              <div class="div"><input class="tag-input" id="tags-id" type="text"></div>
-              <div class="tags-added-container" contenteditable="false"></div>
+    <div class="tm-main row justify-content-md-center margin-x-0">
+      <fieldset class="fieldset-question col-md-7">
+        <legend class="legend-question">Do a new Question</legend>
+        <div class="card-body">
+          <form action="/questions/new-question" method="POST">
+            <div class="mt-3">
+              <label for="title">Title</label>
+              <input type="text" id="title" name="title" class="form-control" placeholder="Title" maxlength="100"
+                value="{{title}}" required="required" autofocus>
+              <small id="emailHelp" class="form-text text-muted">Write a short summary of your question.</small>
             </div>
-          </div>
-          <small id="emailHelp" class="form-text text-muted">Add your tags so experts can find your questions (press "Enter" to add the tag)</small>
-
-
-          <div class="mt-3">
-            <label for="description">Reward</label>
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <span class="input-group-text">$US</span>
+            <div class="mt-3">
+              <label for="description">Description</label>
+              <textarea id="description" name="description" class="form-control trumbowyg-textarea"
+                placeholder="description" required="required" value="{{description}}"></textarea>
+              <small id="emailHelp" class="form-text text-muted">Describe your question in detail.</small>
+            </div>
+            <div class="mt-3">
+              <label for="tags-id">Tags</label>
+              <div class="container-tag2">
+                <div class="div"><input class="tag-input" id="tags-id" type="text"></div>
+                <div class="tags-added-container" contenteditable="false"></div>
               </div>
-              <input type="number" name="reward" min="0.00" max="10000.00" step="0.1"  required="required" />
             </div>
-            <small id="emailHelp" class="form-text text-muted">Specify the amount you will pay to see the
-              answers.</small>
-          </div>
-          <div class="mt-3 container-button">
-            <button class="button-main-1 mt-5" type="submit"> Save </button>
-          </div>
-        </form>
-      </div>
-    </fieldset>
+            <small id="emailHelp" class="form-text text-muted">Add your tags so experts can find your questions (press
+              "Enter" to add the tag)</small>
+
+
+            <div class="mt-3">
+              <label for="description">Reward</label>
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">$US</span>
+                </div>
+                <input type="number" name="reward" min="0.00" max="10000.00" step="0.1" value="{{reward}}"
+                  required="required" />
+              </div>
+              <small id="emailHelp" class="form-text text-muted">Specify the amount you will pay to see the
+                answers.</small>
+            </div>
+            <div class="mt-3 container-button">
+              <button class="button-main-1 mt-5" type="submit"> Save </button>
+            </div>
+          </form>
+        </div>
+      </fieldset>
     </div>
 
   </div>
