--- a/src/views/users/myprofile.hbs
+++ b/src/views/users/myprofile.hbs
@@ -1,16 +1,13 @@
 <div class="row card border-card">
   <div class="card card-question border-card">
     <div class="banner-question u-section-2">
-      <h3 class="u-heading-font u-text u-text-palette-1-base u-text-1">PORTAFOLIO</h3>
-      <h2 class="u-heading-font u-text u-text-2">PROYECTOS RECIENTES</h2>
+      <h3 class="u-heading-font u-text u-text-palette-1-base u-text-1">PROFILE</h3>
+      <h2 class="u-heading-font u-text u-text-2">MY PROFILE</h2>
       <div class="u-border-3 u-border-palette-1-base u-line u-line-horizontal u-line-1"></div>
     </div>
+         {{> errors}}
     <br>
-      {{> errors}}
-
     <div class="tm-main row justify-content-md-center margin-x-0">
-
-
       <fieldset class="fieldset-question col-md-8">
         <legend class="legend-question">Reservation Details</legend>
         <div class="card-body">
@@ -18,12 +15,6 @@
             <div class="mt-3">
               <label for="title">Name</label>
               <input type="text" id="title" name="name" class="form-control" placeholder="Name" value="{{user.name}}"
-                autofocus>
-              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-            </div>
-            <div class="mt-3">
-              <label for="title">Email</label>
-              <input type="text" id="email" name="email" class="form-control" placeholder="Title" value="{{user.email}}"
                 autofocus>
               <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
