--- a/src/views/users/recovery-pass-new.hbs
+++ b/src/views/users/recovery-pass-new.hbs
@@ -11,16 +11,12 @@
     <div class="tm-main row justify-content-md-center margin-x-0 mt-5">
 
       <div class="col-md-7">
+
           <fieldset class="fieldset-question">
             <legend class="legend-question">Reservation Details</legend>
             <div class="card-body">
-              <form action="/users/newpassword?_method=PUT" method="POST" enctype="multipart/form-data">
-                <div class="mt-3">
-                  <label for="currentpassword">Current Password</label>
-                  <input type="password" id="currentpassword" name="currentpassword" class="form-control"
-                    placeholder="Current Password" value="" autofocus>
-                  <small id="emailHelp" class="form-text text-muted">Enter your current password.</small>
-                </div>
+              <form action="/users/recoverypassnew?_method=PUT" method="POST" enctype="multipart/form-data">
+                <input type="hidden" name="idU" value="{{idUser}}" readonly>
                 <div class="mt-3">
                   <label for="newpassword">New Password</label>
                   <input type="password" id="newpassword" name="newpassword" class="form-control"
@@ -41,8 +37,6 @@
             </div>
           </fieldset>
         </div>
-
-
-    </div>
+      </div>
   </div>
 </div>
