--- a/src/views/paypal/success-enable-answers.hbs
+++ b/src/views/paypal/success-enable-answers.hbs
@@ -12,7 +12,7 @@
     <section id="services">
       <div class="container">
         <header class="section-header wow fadeInUp">
-          <h3>Congrats! Your payment has been processed correctly, now you can view the answers to your question. </h3>
+          <h3>Congratulations! We are waiting for the payment verification, we will send you an email when it is completed and you can see the answers.</h3>
           <p> Press the following button to redirect to your questions.</p>
           <div class="row justify-content-md-center">
             <a href="/questions/ownquestions"> <button class="button-main-4">See your Question!</button></a>
