--- a/src/views/emailtemplates/invoicepaidquestion/html.hbs
+++ b/src/views/emailtemplates/invoicepaidquestion/html.hbs
@@ -1,9 +1,9 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-<div class="container">
+<div class="container" style="margin-top: 5rem;"> 
   <div class="col-md-12">
-    <div class="invoice">
+    <div class="invoice" style="background: #fff; padding: 20px">
       <!-- begin invoice-company -->
-      <div class="invoice-company text-inverse f-w-600">
+      <div class="invoice-company text-inverse f-w-600" style="font-size: 20px">
         <span class="pull-right hidden-print">
           <!-- <a href="javascript:;" class="btn btn-sm btn-white m-b-10 p-l-5"><i class="fa fa-file t-plus-1 text-danger fa-fw fa-lg"></i> Export as PDF</a>
             <a href="javascript:;" onclick="window.print()" class="btn btn-sm btn-white m-b-10 p-l-5"><i class="fa fa-print t-plus-1 fa-fw fa-lg"></i> Print</a> -->
@@ -12,25 +12,32 @@
       </div>
       <!-- end invoice-company -->
       <!-- begin invoice-header -->
-      <div class="invoice-header">
-        <div class="invoice-from">
+      <div class="invoice-header" style="margin: 0 -20px; background: #f0f3f4; padding: 20px">
+        <div class="invoice-from" style="display: table-cell; width: 1%; padding-right: 20px; ">
           <small>from</small>
           <address class="m-t-5 m-b-5">
-            <strong class="text-inverse">Priceanswers.com</strong><br>
+            <strong class="text-inverse" style="    font-size: 16px;
+    font-weight: 600;">Priceanswers.com</strong><br>
             Street Address<br>
             City, Zip Code<br>
             Phone: (123) 456-7890<br>
             Fax: (123) 456-7890
           </address>
         </div>
-        <div class="invoice-to">
+        <div class="invoice-to" style="    display: table-cell;
+    width: 1%; padding-right: 20px">
           <small>to</small>
           <address class="m-t-5 m-b-5">
-            <strong class="text-inverse">{{name}}</strong><br>
+            <strong class="text-inverse" style="    font-size: 16px;
+    font-weight: 600;">{{name}}</strong><br>
         </div>
-        <div class="invoice-date">
+        <div class="invoice-date" style="    display: table-cell;
+    width: 1%;     font-size: 16px;     text-align: right;
+    padding-left: 20px;
+    font-weight: 600;">
           <small>Invoice </small>
-          <div class="date text-inverse m-t-5">{{datenow}}</div>
+          <div class="date text-inverse m-t-5" style="    font-size: 16px;
+    font-weight: 600;">{{datenow}}</div>
           <div class="invoice-detail">
             <br>
             Paid Question ID: {{idQuestion}}
@@ -67,40 +74,87 @@
         <!-- end table-responsive -->
         <!-- begin invoice-price -->
         <br>
-        <div class="invoice-price">
-          <div class="invoice-price-left">
-            <div class="invoice-price-row">
-              <div class="sub-price">
-                <small>REWARD</small>
+        <div class="invoice-price" style="    background: #f0f3f4;
+    display: table;
+    width: 100%">
+          <div class="invoice-price-left" style="    display: table-cell;
+    padding: 20px;
+    font-size: 20px;
+    font-weight: 600;
+    width: 75%;
+    position: relative;
+    vertical-align: middle">
+            <div class="invoice-price-row" style="    display: table;
+    float: left">
+              <div class="sub-price" style="    display: table-cell;
+    vertical-align: middle;
+    padding: 0 20px">
+                <small style="    font-size: 12px;
+    font-weight: 400;
+    display: block">REWARD</small>
                 <span class="text-inverse">{{reward_offered}}</span>
               </div>
-              <div class="sub-price">
+              <div class="sub-price" style="    display: table-cell;
+    vertical-align: middle;
+    padding: 0 20px">
                 <i class="fa fa-plus text-muted"></i>
               </div>
-              <div class="sub-price">
-                <small>PAYPAL FEE ({{paypal_fee}}%)</small>
+              <div class="sub-price" style="    display: table-cell;
+    vertical-align: middle;
+    padding: 0 20px">
+                <small style="    font-size: 12px;
+    font-weight: 400;
+    display: block">PAYPAL FEE ({{paypal_fee}}%)</small>
                 <span class="text-inverse">{{total_paypal_fee}}</span>
               </div>
-              <div class="sub-price">
-                <small>PRICEANSWERS FEE ({{priceanswers_fee}}%)</small>
+              <div class="sub-price" style="    display: table-cell;
+    vertical-align: middle;
+    padding: 0 20px">
+                <small style="    font-size: 12px;
+    font-weight: 400;
+    display: block">PRICEANSWERS FEE ({{priceanswers_fee}}%)</small>
                 <span class="text-inverse">{{total_priceanswers_fee}}</span>
               </div>
             </div>
           </div>
-          <div class="invoice-price-right">
-            <small>TOTAL</small> <span class="f-w-600">{{total_paid}}</span>
+          <div class="invoice-price-right" style="    display: table-cell;
+    padding: 20px;
+    font-size: 20px;
+    font-weight: 600;
+    width: 75%;
+    position: relative;
+    vertical-align: middle;
+        width: 25%;
+    background: #2d353c;
+    color: #fff;
+    font-size: 28px;
+    text-align: right;
+    vertical-align: bottom;
+    font-weight: 300">
+            <small style="font-size: 12px;
+    font-weight: 400;
+    display: block;     display: block;
+    opacity: .6;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    font-size: 12px">TOTAL</small> <span class="f-w-600">{{total_paid}}</span>
           </div>
         </div>
         <!-- end invoice-price -->
       </div>
       <!-- end invoice-content -->
       <!-- begin invoice-note -->
-      <div class="invoice-note">
+      <div class="invoice-note" style="    color: #999;
+    margin-top: 80px;
+    font-size: 85%">
         * If you have any questions concerning this invoice, contact [contact@priceanswers.com]
       </div>
       <!-- end invoice-note -->
       <!-- begin invoice-footer -->
-      <div class="invoice-footer">
+      <div class="invoice-footer" style="    border-top: 1px solid #ddd;
+    padding-top: 10px;
+    font-size: 10px; margin-bottom: 20px">
         <p class="text-center m-b-5 f-w-600">
           THANK YOU FOR USE PRICEANSWERS.COM
         </p>
@@ -115,129 +169,3 @@
   </div>
 </div>
 
-<style>
-  body {
-    margin-top: 20px;
-    background: #eee;
-  }
-
-  .invoice {
-    background: #fff;
-    padding: 20px
-  }
-
-  .invoice-company {
-    font-size: 20px
-  }
-
-  .invoice-header {
-    margin: 0 -20px;
-    background: #f0f3f4;
-    padding: 20px
-  }
-
-  .invoice-date,
-  .invoice-from,
-  .invoice-to {
-    display: table-cell;
-    width: 1%
-  }
-
-  .invoice-from,
-  .invoice-to {
-    padding-right: 20px
-  }
-
-  .invoice-date .date,
-  .invoice-from strong,
-  .invoice-to strong {
-    font-size: 16px;
-    font-weight: 600
-  }
-
-  .invoice-date {
-    text-align: right;
-    padding-left: 20px
-  }
-
-  .invoice-price {
-    background: #f0f3f4;
-    display: table;
-    width: 100%
-  }
-
-  .invoice-price .invoice-price-left,
-  .invoice-price .invoice-price-right {
-    display: table-cell;
-    padding: 20px;
-    font-size: 20px;
-    font-weight: 600;
-    width: 75%;
-    position: relative;
-    vertical-align: middle
-  }
-
-  .invoice-price .invoice-price-left .sub-price {
-    display: table-cell;
-    vertical-align: middle;
-    padding: 0 20px
-  }
-
-  .invoice-price small {
-    font-size: 12px;
-    font-weight: 400;
-    display: block
-  }
-
-  .invoice-price .invoice-price-row {
-    display: table;
-    float: left
-  }
-
-  .invoice-price .invoice-price-right {
-    width: 25%;
-    background: #2d353c;
-    color: #fff;
-    font-size: 28px;
-    text-align: right;
-    vertical-align: bottom;
-    font-weight: 300
-  }
-
-  .invoice-price .invoice-price-right small {
-    display: block;
-    opacity: .6;
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    font-size: 12px
-  }
-
-  .invoice-footer {
-    border-top: 1px solid #ddd;
-    padding-top: 10px;
-    font-size: 10px
-  }
-
-  .invoice-note {
-    color: #999;
-    margin-top: 80px;
-    font-size: 85%
-  }
-
-  .invoice>div:not(.invoice-footer) {
-    margin-bottom: 20px
-  }
-
-  .btn.btn-white,
-  .btn.btn-white.disabled,
-  .btn.btn-white.disabled:focus,
-  .btn.btn-white.disabled:hover,
-  .btn.btn-white[disabled],
-  .btn.btn-white[disabled]:focus,
-  .btn.btn-white[disabled]:hover {
-    color: #2d353c;
-    background: #fff;
-    border-color: #d9dfe3;
-  }
-</style>
