--- a/src/views/partials/see-own-question-aenabled.hbs
+++ b/src/views/partials/see-own-question-aenabled.hbs
@@ -362,7 +362,7 @@
         {{#if ../question.best_answer_chosen }}
         {{else}}
         <div class="button-see-answer2 ">
-          <a href="/questions/choose_best_answer/{{_id}}"> <button class="button-see-answer2 button-best-answer"> This is the best Answer!
+          <a href="/paypal/payanswer/{{_id}}"> <button class="button-see-answer2 button-best-answer"> This is the best Answer!
             </button></a>
         </div>
         {{/if}}
