--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -80,6 +80,7 @@
 
   <div class="container-fluid height100 background-container-fluid">
     <main class="tm-main-custom">
+      {{> errors}}
       {{> messages}}
       {{{ body }}}
 
