--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -28,7 +28,7 @@
         <li><a href="/users/signup">Sign Up</a></li>
         {{/if}}
 
-        <li><a href="/stripeaccount/addcustomer">What is PriceAnswers?</a></li>
+        <li><a href="/#featured-services">What is PriceAnswers?</a></li>
 
       </ul>
     </nav><!-- #nav-menu-container -->
