--- a/src/views/paypal/cancel-payment.hbs
+++ b/src/views/paypal/cancel-payment.hbs
@@ -1,8 +1,8 @@
 <div class="row card border-card">
   <div class="card card-question border-card">
     <div class="banner-question u-section-2">
-      <h3 class="u-heading-font u-text u-text-palette-1-base u-text-1">USER</h3>
-      <h2 class="u-heading-font u-text u-text-2">USER NOT VERIFIED</h2>
+      <h3 class="u-heading-font u-text u-text-palette-1-base u-text-1">QUESTIONS</h3>
+      <h2 class="u-heading-font u-text u-text-2">YOUR QUESTIONS</h2>
       <div class="u-border-3 u-border-palette-1-base u-line u-line-horizontal u-line-1"></div>
     </div>
     <br>
@@ -13,11 +13,11 @@
       <div class="container">
 
         <header class="section-header wow fadeInUp">
-          <h3>WARNING! Your account in Paypal is not verified</h3>
+          <h3>WARNING! Your payment was not successful</h3>
           <p>
-            Please verify your account and payment method on Paypal.</p>
+            Please try to make the payment again, if the problem persists contact: contacto@priceanswers.com.</p>
           <div class="row justify-content-md-center">
-            <a href="https://www.paypal.com"> <button class="button-main-4">Go to Paypal</button></a>
+            <a href="/questions/ownquestions"> <button class="button-main-4">Go to your Questions</button></a>
           </div>
 
         </header>
