--- a/src/public/css/questions.css
+++ b/src/public/css/questions.css
@@ -730,4 +730,87 @@ h2:not(.u-subtitle) {
 .alert{
   height: 50px !important;
   max-height: 50px !important;
+  position: fixed !important;
+  z-index: 1000;
+  width: 100% !important;
+}
+.reward-container{
+  background: #f0f3f4;
+  display: table;
+  width: 100%;
+}
+.reward-sub-container{
+  display: table-cell;
+  padding: 20px;
+  font-size: 20px;
+  font-weight: 600;
+  vertical-align: middle;
+}
+.reward-left{
+  display: table;
+  float: left;
+  text-align: center;
+}
+.reward-left-item{
+
+  vertical-align: middle;
+  padding: 0 20px; 
+}
+.reward-left-item-small{
+  font-size: 12px;
+    font-weight: 400;
+    display: block
+}
+.reward-right{
+  display: table-cell;
+  padding: 20px;
+  font-size: 20px;
+  font-weight: 600;
+
+  position: relative;
+  vertical-align: middle;
+      width: 25%;
+  background: #2d353c;
+  color: #fff;
+  font-size: 28px;
+  text-align: right;
+  font-weight: 300;
+  text-align: center;
+}
+.reward-right-small{
+  font-size: 12px;
+  font-weight: 400;
+  display: block;
+  display: block;
+  font-size: 15px;
+  color: white;
+}
+.reward-right-item{
+  vertical-align: middle;
+  padding: 0 20px; 
+}
+
+@media (min-width: 600px) { 
+  .reward-left-item {
+    display: table-cell;
+  }
+  .reward-right-item{
+    display: table-cell; 
+  }
+}
+.justify-content-center{
+  justify-content: center;
+}
+.reward-right-text{
+  color: #ffffff;
+  font-size: 15px;
+}
+.title-modal-class{
+text-align: center;
+}
+.first-modal-class{
+  font-size: 18px;font-weight: 500; text-align: center;
+}
+.second-modal-class{
+  font-size: 15px; text-align: center; margin-top: 1rem;
 }
