--- a/src/views/emailtemplates/invoicepaidanswer/html.hbs
+++ b/src/views/emailtemplates/invoicepaidanswer/html.hbs
@@ -1,29 +1,44 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="container" style="margin-top: 5rem; align-content: center;
     margin-left: auto;
-    margin-right: auto;">
+    margin-right: auto;
+    max-width: 900px;">
   <div class="col-md-12">
     <div class="invoice" style="background: #fff; padding: 20px">
       <!-- begin invoice-company -->
       <div class="invoice-company text-inverse f-w-600" style="
     margin-left: auto;
     margin-right: auto;
-    text-align: center;">
+    text-align: center; ">
         <span style="font-size: 30px;"> Priceanswers.com</span>
+        </div>
+         <div class="invoice-company text-inverse f-w-600" style="
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin-top: 1rem;">
         <span style="font-size: 20px;"> Receipt Transaction</span>
+        </div>
+         <div class="invoice-company text-inverse f-w-600" style="
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin-top: 1rem;">
         <span style="font-size: 15px;">
           Dear {{name}}, congratulations! You have been chosen as the best answer to the question ID: "{{idQuestion}}",
           if you would
           like
           to review your answers please go to the "My answers" section on priceanswers.com.
           Below is your receipt please keep it in a safe place</span>
+          </div>
+
 
 
 
       </div>
       <!-- end invoice-company -->
       <!-- begin invoice-header -->
-      <div class="invoice-header" style="margin: 0 -20px; background: #f0f3f4; padding: 20px">
+      <div class="invoice-header" style="margin: 0 -20px; background: #f0f3f4; padding: 20px; margin-top: 2rem;">
         <div class="invoice-from" style="display: table-cell; width: 1%; padding-right: 20px; ">
           <small>from</small>
           <address class="m-t-5 m-b-5">
