--- a/src/views/partials/errors.hbs
+++ b/src/views/partials/errors.hbs
@@ -2,7 +2,7 @@
 <div class="col-md-12 alert alert-danger alert-dismissible fade show" role="alert">
   <div class="alert-container">
     {{error}}
-    <button type="button" id="alertbutton" class="close alert" aria-label="Close"> <span aria-hidden="true">&times;</span></button>
+    <button type="button" id="alertbutton" class="close alert" aria-label="Close"> <span class="close-x-span" aria-hidden="true">&times;</span></button>
   </div>
 </div>
 {{/if}}
@@ -11,7 +11,7 @@
 <div class="col-md-12 alert alert-danger alert-dismissible fade show" role="alert">
    <div class="alert-container">
   {{text}}
-  <button type="button" id="alertbutton" class="close alert" aria-label="Close"> <span aria-hidden="true">&times;</span></button>
+  <button type="button" id="alertbutton" class="close alert" aria-label="Close"> <span class="close-x-span" aria-hidden="true">&times;</span></button>
 </div>
 </div>
 {{/each}}
