--- a/src/views/partials/messages.hbs
+++ b/src/views/partials/messages.hbs
@@ -1,12 +1,12 @@
 {{#if success_msg}}
 <div class="alert alert-success alert-dismissible  show" role="alert">
   {{success_msg}}
-  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+ <button type="button" id="alertbutton" class="close alert" aria-label="Close"> <span class="close-x-span" aria-hidden="true">&times;</span></button>
 </div>
 {{/if}}
 {{#if error_msg}}
 <div class="alert alert-danger alert-dismissible  show" role="alert">
   {{error_msg}}
-  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  <button type="button" id="alertbutton" class="close alert" aria-label="Close"> <span class="close-x-span" aria-hidden="true">&times;</span></button>
 </div>
 {{/if}}
