--- a/src/views/questions/new-question.hbs
+++ b/src/views/questions/new-question.hbs
@@ -67,7 +67,7 @@
                   </div>
                   <div class="reward-left-item">
                     <small class="reward-left-item-small">
-                      PAYPAL FEE (4.5%)
+                      TRANSACTION FEE (10%)
                     </small>
                     <div class="sub-price">
                       <p id="paypal-reward"></p>
