--- a/src/views/emailtemplates/invoicepaidanswer/html.hbs
+++ b/src/views/emailtemplates/invoicepaidanswer/html.hbs
@@ -126,37 +126,11 @@
     padding: 0 20px">
                 <i class="fa fa-plus text-muted"></i>
                 =
-              </div>
-              <div class="sub-price" style="    display: table-cell;
-    vertical-align: middle;
-    padding: 0 20px">
-                <small style="    font-size: 12px;
-    font-weight: 400;
-    display: block">PRICEANSWERS REWARD</small>
-                <span class="text-inverse">{{reward_offered}}</span>
-              </div>
-              <div class="sub-price" style="display: table-cell;
-    vertical-align: middle;
-    padding: 0 20px">
-                <i class="fa fa-plus text-muted"></i>
-                -
-              </div>
-              <div class="sub-price" style="    display: table-cell;
-    vertical-align: middle;
-    padding: 0 20px">
-                <small style="    font-size: 12px;
-    font-weight: 400;
-    display: block">PAYPAL FEE ({{paypal_fee}}%)</small>
-                <span class="text-inverse">{{total_paypal_fee}}</span>
-              </div>
-                            <div class="sub-price" style="display: table-cell;
-    vertical-align: middle;
-    padding: 0 20px">
-                <i class="fa fa-plus text-muted"></i>
-                =
-              </div>
+             
+
 
             </div>
+          </div>
           </div>
           <div class="invoice-price-right" style=" display: table-cell;
     padding: 20px;
@@ -179,7 +153,7 @@
     position: absolute;
     top: 10px;
     left: 10px;
-    font-size: 12px">TOTAL</small> <span class="f-w-600">{{total_paid}}</span>
+    font-size: 12px">TOTAL</small> <span class="f-w-600">{{total_paid}} USD</span>
           </div>
         </div>
         <!-- end invoice-price -->
