--- a/src/views/emailtemplates/invoicepaidquestion/html.hbs
+++ b/src/views/emailtemplates/invoicepaidquestion/html.hbs
@@ -94,12 +94,12 @@
                 <small style="    font-size: 12px;
     font-weight: 400;
     display: block">REWARD</small>
-                <span class="text-inverse">{{reward_offered}}</span>
+                <span class="text-inverse">{{reward_offered}} USD</span>
               </div>
               <div class="sub-price" style="    display: table-cell;
     vertical-align: middle;
     padding: 0 20px">
-                <i class="fa fa-plus text-muted"></i>
+               +
               </div>
               <div class="sub-price" style="    display: table-cell;
     vertical-align: middle;
@@ -107,16 +107,22 @@
                 <small style="    font-size: 12px;
     font-weight: 400;
     display: block">PAYPAL FEE ({{paypal_fee}}%)</small>
-                <span class="text-inverse">{{total_paypal_fee}}</span>
+                <span class="text-inverse">{{total_paypal_fee}} USD</span>
               </div>
               <div class="sub-price" style="    display: table-cell;
+    vertical-align: middle;
+    padding: 0 20px"> + </div>
+     <div class="sub-price" style="    display: table-cell;
     vertical-align: middle;
     padding: 0 20px">
                 <small style="    font-size: 12px;
     font-weight: 400;
     display: block">PRICEANSWERS FEE ({{priceanswers_fee}}%)</small>
-                <span class="text-inverse">{{total_priceanswers_fee}}</span>
+                <span class="text-inverse">{{total_priceanswers_fee}} USD</span>
               </div>
+                            <div class="sub-price" style="    display: table-cell;
+    vertical-align: middle;
+    padding: 0 20px"> = </div>
             </div>
           </div>
           <div class="invoice-price-right" style="    display: table-cell;
