--- a/src/views/questions/new-question.hbs
+++ b/src/views/questions/new-question.hbs
@@ -67,7 +67,10 @@
                   </div>
                   <div class="reward-left-item">
                     <small class="reward-left-item-small">
-                      TRANSACTION FEE (10%)
+                      TRANSACTION FEE 
+                    </small>
+                    <small class="reward-left-item-small">
+                       (5.4% + 0.3 USD)
                     </small>
                     <div class="sub-price">
                       <p id="paypal-reward"></p>
