--- a/src/views/questions/own-questions.hbs
+++ b/src/views/questions/own-questions.hbs
@@ -20,7 +20,11 @@
             <button class="tm-search-button" type="submit">
               <i class="fas fa-search tm-search-icon" aria-hidden="true"></i>
             </button>
+            
           </div>
+          <div class="row col-md-12 note-filter">
+              Press "Enter" to tag(s)
+            </div>
 
           <div class="tags-added-container" contenteditable="false">
             {{#each filters}}
