--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -32,7 +32,7 @@
           <h4>Contact us</h4>
           <p>
             <strong>Email:</strong>
-            contacto@priceanswers.com<br />
+            contact@priceanswers.com<br />
           </p>
 
         </div>
