--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -131,6 +131,7 @@
   </script> -->
 
 
+<script src="https://cdn.jsdelivr.net/gh/WangYuLue/image-conversion/build/conversion.js"></script>
 
 
 <script src="trumbowyg/dist/plugins/fontsize/trumbowyg.fontsize.min.js"></script>
