--- a/src/views/questions/new-question.hbs
+++ b/src/views/questions/new-question.hbs
@@ -10,8 +10,8 @@
     <div class="tm-main row justify-content-md-center margin-x-0">
       <fieldset class="fieldset-question col-md-7">
         <legend class="legend-question">Do a new Question</legend>
-        <div class="card-body">
-          <form action="/questions/new-question" method="POST">
+        <div class="card-body"> 
+          <form action="/questions/new-question" method="POST" enctype="multipart/form-data">
             <div class="mt-3">
               <label for="title">Title</label>
               <input type="text" id="title" name="title" class="form-control" placeholder="Title" maxlength="100"
@@ -22,6 +22,12 @@
               <label for="description">Description</label>
               <textarea id="description" name="description" class="form-control trumbowyg-textarea"
                 placeholder="description" required="required" value="{{description}}"></textarea>
+              <small id="emailHelp" class="form-text text-muted">Describe your question in detail.</small>
+            </div>
+            <div class="mt-3">
+              <label for="image">Image</label>
+           <input type="file" id="image" 
+                       name="image" value=""  onchange="view()"  >
               <small id="emailHelp" class="form-text text-muted">Describe your question in detail.</small>
             </div>
             <div class="mt-3">
