--- a/src/views/users/myprofile.hbs
+++ b/src/views/users/myprofile.hbs
@@ -8,7 +8,7 @@
     <br>
     <div class="tm-main row justify-content-md-center margin-x-0">
       <fieldset class="fieldset-question col-md-8">
-        <legend class="legend-question">Reservation Details</legend>
+        <legend class="legend-question">Profile Details</legend>
         <div class="card-body">
           <form action="/users/myprofile?_method=PUT" method="POST" enctype="multipart/form-data">
             <div class="mt-3">
@@ -44,6 +44,12 @@
               <label for="button">Change Password:</label>
               <a href="/users/newpassword"><button type="button" id="" class="button-main-2">New Password</button></a>
             </div>
+            {{#if user.admin}}
+            <div class="mt-3">
+              <label for="button">Dashboard transfer</label>
+              <a href="/admin/dashboard-transfer"><button type="button" id="" class="button-main-2">Dashboard transfer</button></a>
+            </div>
+            {{/if}}
 
             <div class="mt-3 container-button">
               <button class="button-main-1 mt-5" type="submit"> Save </button>
